--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ var coinsPD = 0;
 
 function gainCoin() {
 
-  var audio = new Audio('sækmønter.mp3.mp3');
+  var audio = new Audio('./sækmønter.mp3.mp3');
     audio.play();
 
 coins += coinsPC;
